# SugarImage

./: .gitignore  CMakeLists.txt  README.md
config/: Sugar.ImageConfig.cmake.in
example/: CMakeLists.txt  SimpleUsages.cpp
include/: ImageSimilarity.h  LibExport.h  SugarImage.h
src/: CMakeLists.txt  ImageSimilarity.cpp  MeasuableObject.cpp  MeasuableObject.h
src/creator/: MeasuableObjectCreator.h
src/hash/: AHashMeasuableObject.cpp  AHashMeasuableObject.h  DHashMeasuableObject.cpp  DHashMeasuableObject.h  Hash.h  MD5.cpp  MD5.h  MD5MeasuableObject.cpp  MD5MeasuableObject.h  PHashMeasuableObject.cpp  PHashMeasuableObject.h
src/utils/: StringFormatter.cpp  StringFormatter.h
