cmake_minimum_required(VERSION 3.15)

project(Sugar.Image VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 20)

set(META_PROJECT_NAME        ${PROJECT_NAME})
set(META_PROJECT_DESCRIPTION "This project involves image processing.")
set(META_AUTHOR_ORGANIZATION "CpTea")
set(META_AUTHOR_MAINTAINER   "https://github.com/CpTea")
set(META_VERSION_MAJOR       ${PROJECT_VERSION_MAJOR})
set(META_VERSION_MINOR       ${PROJECT_VERSION_MINOR})
set(META_VERSION_PATCH       ${PROJECT_VERSION_PATCH})
set(META_VERSION             "${META_VERSION_MAJOR}.${META_VERSION_MINOR}.${META_VERSION_PATCH}")
set(META_NAME_VERSION        "${META_PROJECT_NAME} v${META_VERSION}")

file(WRITE "${PROJECT_BINARY_DIR}/VERSION" "${META_NAME_VERSION}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIGURATION>)
set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install/${PROJECT_NAME})

add_subdirectory(src)
add_subdirectory(example)
